# sputtering-control-panel

./: .gitmodules  CMakeLists.txt  README.md  lv_conf.h  lv_drv_conf.h  pico_sdk_import.cmake
bsp/pico/: CMakeLists.txt
bsp/pico/include/scp/: can_bus.h
bsp/pico/src/: can_bus.c
docs/: architecture.md  cmake flags.md  ion gague.md  pirani.md  roughing-pump.md
docs/pinout/: pirani_generated_pinout.html  roughing_pump_generated_pinout.html
modules/: CMakeLists.txt
modules/pirani/include/: module_config.h  pressure_display.h  pressure_display_spi.h  pressure_format.h  pressure_sensor.h
modules/pirani/src/: main.c  pressure_display.c  pressure_display_spi.c  pressure_format.c  pressure_sensor.c
modules/roughing_pump/include/: module_config.h  roughing_pump_can_messages.h
modules/roughing_pump/src/: main.c  roughing_pump_can_messages.c
shared/: CMakeLists.txt
shared/include/scp/: can_messages.h  module_runtime.h  pico_gpio_map.h  protocol.h
shared/src/: can_messages.c  module_runtime.c  pico_gpio_map.c  protocol.c
tools/: build.sh  check_module_pins.py  flash.sh
